# min-avatar-description

abb_gofa_support/: CMakeLists.txt  package.xml
abb_gofa_support/urdf/: gofa.xacro  gofa_macro.xacro
avatar_visualizer/: CMakeLists.txt  package.xml
avatar_visualizer/robots/: avatar.urdf.xacro  avatar_arm.urdf.xacro  avatar_arm_macro.xacro  sr_hand_macro.xacro
sr_description/hand/xacro/forearm/: forearm_e.urdf.xacro
