<?xml version="1.0" ?>
<package format="2">
  <name>abb_gofa_support</name>
  <version>0.0.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB Gofa (and variants).
    </p>
  </description>
  <author>Geoffrey Chiou (Southwest Research Institute)</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb_irb1200_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
    <!-- <architecture_independent/> -->
  </export>
</package>
